opam-version: "1.2"
name: "episql-caqtipersist"
author: "Petter A. Urkedal <paurkedal@gmail.com>"
maintainer: "Petter A. Urkedal <paurkedal@gmail.com>"
homepage: "https://github.com/paurkedal/episql/"
bug-reports: "https://github.com/paurkedal/episql/issues"
dev-repo: "https://github.com/paurkedal/episql.git"
license: "LGPL-3 with OCaml linking exception"

build: [["jbuilder" "build" "-p" name "-j" jobs]]
build-test: [["jbuilder" "runtest" "-p" name "-j" jobs]]

depends: [
  "episql"
  "jbuilder" {build}
  "lwt"
  "ppx_compose"
  "prime"
  "re"
]
