opam-version: "2.0"
name: "episql-caqtipersist"
maintainer: "Petter A. Urkedal <paurkedal@gmail.com>"
authors: "Petter A. Urkedal <paurkedal@gmail.com>"
license: "LGPL-3 with OCaml linking exception"
homepage: "https://github.com/paurkedal/episql/"
bug-reports: "https://github.com/paurkedal/episql/issues"
depends: [
  "ocaml"
  "episql"
  "jbuilder" {build}
  "lwt"
  "ppx_compose"
  "prime"
  "re"
]
build: [
  ["jbuilder" "build" "-p" name "-j" jobs]
  ["jbuilder" "runtest" "-p" name "-j" jobs] {with-test}
]
dev-repo: "git+https://github.com/paurkedal/episql.git"
