opam-version: "2.0"
name: "episql"
maintainer: "Petter A. Urkedal <paurkedal@gmail.com>"
authors: "Petter A. Urkedal <paurkedal@gmail.com>"
license: "LGPL-3 with OCaml linking exception"
homepage: "https://github.com/paurkedal/episql/"
bug-reports: "https://github.com/paurkedal/episql/issues"
depends: [
  "ocaml"
  "dune" {build}
  "lwt"
  "ppx_compose"
  "prime"
  "re"
  "xmlm"
]
build: [
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
]
dev-repo: "git+https://github.com/paurkedal/episql.git"
