opam-version: "2.0"
name: "episql"
maintainer: "Petter A. Urkedal <paurkedal@gmail.com>"
authors: "Petter A. Urkedal <paurkedal@gmail.com>"
license: "LGPL-3 with OCaml linking exception"
homepage: "https://github.com/paurkedal/episql/"
bug-reports: "https://github.com/paurkedal/episql/issues"
depends: [
  "ocaml"
  "dune" {>= "1.9"}
  "fmt"
  "prime"
  "re"
  "xmlm"
]
build: [
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
]
dev-repo: "git+https://github.com/paurkedal/episql.git"
synopsis: "SQL schema parser and code generator"
description: """
epiSQL /ˈɛpɪˈsiːkwəl/ is an SQL schema parser and code generator.  It
supports a subset of SQL `CREATE`-statements with focus on PostgreSQL.  It
contains generators for

  * [Caqti][], providing a persistence-style API with caching,
  * XML, providing easy access for external applications to the schema, and
  * Unix shells, providing a series of function calls for general ad-hoc use.
"""
