(tests
  (names test_caqti_persist)
  (modules test_caqti_persist schema_one_persist schema_one_persist_types)
  (libraries calendar caqti_persist caqti-dynload lwt lwt_log))

(tests
  (names schema_one_macaque)
  (modules schema_one_macaque)
  (preprocess (action
    (bash "camlp4o -I `ocamlfind query macaque` -filter syntax.cma %{deps}")))
  (libraries macaque))

(rule
  (targets schema_one_macaque.ml)
  (deps (:schema schema_one.sql) ../bin/episql_main.exe)
  (action (run ../bin/episql_main.exe -g macaque %{schema} -o %{targets})))

(rule
  (targets schema_one_persist_types.mli)
  (deps (:schema schema_one.sql) ../bin/episql_main.exe)
  (action
    (run ../bin/episql_main.exe
      -g caqti-persist-types-mli
      -new-order-by -raise-on-absent -connection-arg c
      -ppx-deriving show -pk-module Key %{schema} -o %{targets})))

(rule
  (targets schema_one_persist_types.ml)
  (deps (:schema schema_one.sql) ../bin/episql_main.exe)
  (action
    (run ../bin/episql_main.exe
      -g caqti-persist-types-ml
      -new-order-by -raise-on-absent -connection-arg c
      -ppx-deriving show -pk-module Key %{schema} -o %{targets})))

(rule
  (targets schema_one_persist.mli)
  (deps (:schema schema_one.sql) ../bin/episql_main.exe)
  (action
    (run ../bin/episql_main.exe
      -g caqti-persist-mli -t schema_one_persist_types
      -new-order-by -raise-on-absent -connection-arg c
      -ppx-deriving show -pk-module Key %{schema} -o %{targets})))

(rule
  (targets schema_one_persist.ml)
  (deps (:schema schema_one.sql) ../bin/episql_main.exe)
  (action
    (run ../bin/episql_main.exe
      -g caqti-persist-ml -t schema_one_persist_types
      -new-order-by -raise-on-absent -connection-arg c
      -ppx-deriving show -pk-module Key %{schema} -o %{targets})))

(rule
  (targets schema_one.xml)
  (deps (:schema schema_one.sql) ../bin/episql_main.exe)
  (action
    (run ../bin/episql_main.exe -g xml %{schema} -o %{targets})))

(alias (name runtest) (deps schema_one.xml))
